# SDL3-OpenGL

./: .cz.toml  .czrc  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  VERSIONS.md  vcpkg.C.ProgramFiles.MicrosoftVisualStudio.2022.Community.VC.vcpkg.1.0.0.nupkg  vcpkg.json
src/: main.cpp
src/engine/: CMakeLists.txt  engine.cpp  gl_debug.hpp  input_keyboard_state.h  input_manager.cpp  resource_manager.cpp  resource_manager.h  shader.cpp  shader.h  texture.cpp  texture.h  timer.cpp  timer.h  vertex_array.cpp  window_sdl.cpp  window_sdl.h
src/game/: CMakeLists.txt  game.h  gamestate_main.cpp
